--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,5 +12,7 @@ html(lang="ru")
 			.links
 				.links_cont
 					ul
+						//- li
+						//- 	a(target="_blank" href="main.html") Главная
 						li
-							a(target="_blank" href="main.html") Главная
+							a(target="_blank" href="mmi-case.html") MMI кейс
