--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -6,7 +6,7 @@ html(lang="ru")
 		include inc/head.pug
 		include inc/css.pug
 	body.main.loading
-		include inc/header.pug
+		//- include inc/header.pug
 		main#content
 			.wrapper
 				
